# claude-code-hooks-multi-agent-observability

./: .env.example  .env.sample  .gitallowed  .gitignore  .gitleaks.toml  .trufflehog-exclude  ACTIONABLE_TICKETS.md  BASELINE_COVERAGE_REPORT.md  PULL_REQUEST_DESCRIPTION.md  README.md  SUPERCLAUDE_INTEGRATION_COMPLETE.md  TEST_PLAN_COMPREHENSIVE.md  VERIFICATION_RESULTS.md  docker-compose.override.yml  docker-compose.yml  feature-test.md  package-lock.json  package.json  test-fork-change.md
.github/: CODEOWNERS
config/: README.md  orchestrator.yml  port_assignments.json  settings.json  vscode-claude-hooks.json
docs/: DEVELOPMENT_ENVIRONMENT.md  README_SECRET_SCANNING.md  SECRET_SCANNING.md  SECRET_SCAN_SUPPRESSION.md  security.md  superclaude-integration.md
reports/: coverage-gaps.md  current-integration.md  e2e_results_20250714_230113.json  e2e_results_20250714_230151.json  e2e_results_20250714_230604.json  e2e_results_20250714_230810.json  implementation-summary.md  report.html  report.json
scripts/: hook-event-forwarder.py  hooks-proxy.js  launch_dev_env.py  reset-system.sh  run-e2e.sh  security-test.sh  start-system.sh  start_env.sh  stop_env.sh  superclaude-monitor.js  test-system.sh  workspace-init.sh
skeleton-projects/: README.md
skeleton-projects/axum/: .env.example  Cargo.toml  Dockerfile  Makefile
skeleton-projects/axum/src/: lib.rs  main.rs
test-harness/: Dockerfile  PORT_ALLOCATION_PREFLIGHT.md  PORT_MANAGEMENT.md  README.md  README_SERVER_PORT_TESTS.md  TASK_COMPLETION_REPORT.md  branch_comparison.py  container_orchestrator.py  demo_ports.py  (+16 more)
(+160 files in other folders)
